src/components/SkillBanner/SkillBanner.module.scss
@import 'src/assets/globalStyleElements.module';

.SkillBanner {
  padding: 0.5vw;
  transition: all 0.55s ease-in-out;

  .imageContainer {
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .imageContainer img {
    height: 2.7vw;
    width: 2.7vw;
    transition: transform 0.55s ease-in-out;
  }

  .textContainer {
    position: absolute;
    margin-left: auto;
    margin-right: auto;
    left: 0;
    right: 0;
    bottom: 0.3rem;
    text-align: center;
    font-size: $globalFontSize * 0.8;
    border-radius: 50vw;
    opacity: 0;
    transition: opacity 0.25s ease-in-out;
  }

  @mixin contentStyling {
    @include boxShadowSmall;
    min-width: 8vw;
    min-height: 8vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    position: relative;
    border: solid transparent;
    border-radius: $globalBorderRadius * 10;
    &:hover .textContainer {
      opacity: 1;
    }

    &:hover img {
      //opacity: 0.3;
      transform: translate(0%, -20%);
      //filter: grayscale(1);
    }
  }

  @mixin experienceIndicatorMixin {
    height: 0;
    overflow: hidden;
    background-color: #ddd;
    position: relative;
  }

  @mixin experienceIndicatorAnimationContainerMixin {
    content: "";
    width: 100%;
    background-color: $globalHighlightColorRgba;
    position: absolute;
    bottom: 0;
    animation: fadeIn 0.55s ease-in-out both,  bottomToTop 0.55s cubic-bezier(0.74, 0.06, 0.4, 0.92) both;
  }

  .beginner {
    @include experienceIndicatorMixin;
  }
  .beginner::before {
    height: 20%;
    @include experienceIndicatorAnimationContainerMixin;
  }

  .moderate {
    @include experienceIndicatorMixin
  }
  .moderate::before {
    height: 60%;
    @include experienceIndicatorAnimationContainerMixin;
    background-color: $globalHighlightColorRgba;
  }

  .experienced {
    @include experienceIndicatorMixin
  }
  .experienced::before {
    height: 90%;
    @include experienceIndicatorAnimationContainerMixin;
  }
  .darkTheme {
    @include darkThemeContent;
    @include contentStyling;
  }

  .lightTheme {
    @include lightThemeContent;
    @include contentStyling;
  }

  .colorfulTheme {
    @include colorfulThemeContent;
    @include contentStyling;
  }
}

@keyframes fadeIn {
  from {
    opacity: 0;
    right: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes bottomToTop {
  0% {
    bottom: -100%;
  }
  100% {
    bottom: 0;
  }
}

